--- a/package.json
+++ b/package.json
@@ -19,15 +19,11 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.5"
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "mocha -require @babel/register  \"test/**/*.js\"",
-    "lint": "./node_modules/.bin/eslint src/",
-    "eject": "react-scripts eject"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.main.js --hot --inline",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.main.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,18 +42,35 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.5.4",
+    "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.0",
-    "@babel/preset-env": "^7.5.4",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "^7.4.4",
+    "@types/node": "^12.7.2",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "chai": "^4.2.0",
+    "cross-env": "^5.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint-plugin-react": "^7.14.2",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "mocha": "^6.1.4",
+    "raw-loader": "^3.1.0",
+    "react-hot-loader": "^4.12.11",
     "react-test-renderer": "^16.8.6",
-    "sinon": "^7.3.2"
+    "sinon": "^7.3.2",
+    "source-map-loader": "^0.2.4",
+    "tslint": "^5.19.0",
+    "tslint-react": "^4.0.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0",
+    "webpack-merge": "^4.2.1"
   }
 }
