Add typescript support

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "connected-react-router": "^6.5.0",
     "formik": "^1.5.7",
     "history": "^4.9.0",
-    "node-sass": "^4.12.0",
+    "jquery": "^3.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
@@ -22,8 +22,8 @@
     "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.main.js --hot --inline",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.main.js"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js --hot --inline",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,23 +51,30 @@
     "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.2",
+    "@types/react-router-dom": "^4.3.5",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "chai": "^4.2.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint-plugin-react": "^7.14.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^6.1.4",
+    "node-sass": "^4.12.0",
     "raw-loader": "^3.1.0",
     "react-hot-loader": "^4.12.11",
     "react-test-renderer": "^16.8.6",
+    "sass-loader": "^7.3.1",
     "sinon": "^7.3.2",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.0.0",
     "tslint": "^5.19.0",
     "tslint-react": "^4.0.0",
+    "typescript": "^3.5.3",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
