--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,11 @@
     "experimentalDecorators": true,
     "target": "es5",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "./build",
     "baseUrl": "./",
-    "jsx": "react"
+    "jsx": "react",
+    "allowJs": false,
+    "noImplicitAny": true
   },
   "exclude": ["node_modules", "dist"]
 }
